@@ -18,6 +18,7 @@ import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Sets;
+import com.google.common.flogger.GoogleLogger;
 import com.google.common.util.concurrent.ThreadFactoryBuilder;
 import com.google.devtools.build.lib.actions.ActionExecutionContext;
 import com.google.devtools.build.lib.actions.Spawn;
@@ -25,8 +26,11 @@ import com.google.devtools.build.lib.actions.SpawnStrategy;
 import com.google.devtools.build.lib.actions.Spawns;
 import com.google.devtools.build.lib.buildtool.BuildRequestOptions;
 import com.google.devtools.build.lib.concurrent.ExecutorUtil;
+import com.google.devtools.build.lib.events.Event;
+import com.google.devtools.build.lib.events.Reporter;
 import com.google.devtools.build.lib.exec.ExecutionPolicy;
 import com.google.devtools.build.lib.exec.SpawnStrategyRegistry;
+import com.google.devtools.build.lib.exec.local.LocalExecutionOptions;
 import com.google.devtools.build.lib.runtime.BlazeModule;
 import com.google.devtools.build.lib.runtime.Command;
 import com.google.devtools.build.lib.runtime.CommandEnvironment;
@@ -37,17 +41,24 @@ import com.google.devtools.build.lib.util.AbruptExitException;
 import com.google.devtools.build.lib.util.DetailedExitCode;
 import com.google.devtools.build.lib.util.io.FileOutErr;
 import com.google.devtools.common.options.OptionsBase;
+import com.google.errorprone.annotations.ForOverride;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
 /** {@link BlazeModule} providing support for dynamic spawn execution and scheduling. */
 public class DynamicExecutionModule extends BlazeModule {
+  private static final GoogleLogger logger = GoogleLogger.forEnclosingClass();
 
   private ExecutorService executorService;
+  Set<Integer> ignoreLocalSignals = ImmutableSet.of();
+  protected Reporter reporter;
+  protected boolean verboseFailures;
+  private LocalExecutionOptions localOptions;
 
   public DynamicExecutionModule() {}
 
@@ -63,30 +74,55 @@ public class DynamicExecutionModule extends BlazeModule {
         : ImmutableList.<Class<? extends OptionsBase>>of();
   }
 
+  @SuppressWarnings("AllowVirtualThreads")
   @Override
   public void beforeCommand(CommandEnvironment env) {
-    executorService =
-        Executors.newCachedThreadPool(
-            new ThreadFactoryBuilder().setNameFormat("dynamic-execution-thread-%d").build());
+    var buildRequestOptions = env.getOptions().getOptions(BuildRequestOptions.class);
+    if (buildRequestOptions != null && buildRequestOptions.useAsyncExecution) {
+      executorService =
+          Executors.newThreadPerTaskExecutor(
+              Thread.ofVirtual().name("dynamic-execution-thread-", 0).factory());
+    } else {
+      executorService =
+          Executors.newCachedThreadPool(
+              new ThreadFactoryBuilder().setNameFormat("dynamic-execution-thread-%d").build());
+    }
     env.getEventBus().register(this);
+    com.google.devtools.build.lib.exec.ExecutionOptions executionOptions =
+        env.getOptions().getOptions(com.google.devtools.build.lib.exec.ExecutionOptions.class);
+    verboseFailures = executionOptions != null && executionOptions.verboseFailures;
+    DynamicExecutionOptions dynamicOptions =
+        env.getOptions().getOptions(DynamicExecutionOptions.class);
+    localOptions = env.getOptions().getOptions(LocalExecutionOptions.class);
+    ignoreLocalSignals =
+        dynamicOptions != null && dynamicOptions.ignoreLocalSignals != null
+            ? dynamicOptions.ignoreLocalSignals
+            : ImmutableSet.of();
+    reporter = env.getReporter();
   }
 
   @VisibleForTesting
-  ImmutableMap<String, List<String>> getLocalStrategies(DynamicExecutionOptions options)
-      throws AbruptExitException {
+  ImmutableMap<String, List<String>> getLocalStrategies(
+      DynamicExecutionOptions options, boolean sandboxingSupported) throws AbruptExitException {
     // Options that set "allowMultiple" to true ignore the default value, so we replicate that
     // functionality here.
-    // ImmutableMap.Builder fails on duplicates, so we use a regular map first to remove dups.
-    Map<String, List<String>> localAndWorkerStrategies = new HashMap<>();
-    localAndWorkerStrategies.put("", ImmutableList.of("worker", "sandboxed"));
-
-    if (!options.dynamicLocalStrategy.isEmpty()) {
-      for (Map.Entry<String, List<String>> entry : options.dynamicLocalStrategy) {
-        localAndWorkerStrategies.put(entry.getKey(), entry.getValue());
-        throwIfContainsDynamic(entry.getValue(), "--dynamic_local_strategy");
-      }
+    ImmutableMap.Builder<String, List<String>> localAndWorkerStrategies = ImmutableMap.builder();
+    ImmutableList.Builder<String> defaultLocalStrategies = ImmutableList.builder();
+    defaultLocalStrategies.add("worker");
+    if (sandboxingSupported) {
+      defaultLocalStrategies.add("sandboxed");
     }
-    return ImmutableMap.copyOf(localAndWorkerStrategies);
+    if (localOptions != null && localOptions.localLockfreeOutput) {
+      // Without local lock free, having standalone execution risks very bad performance.
+      defaultLocalStrategies.add("standalone");
+    }
+    localAndWorkerStrategies.put("", defaultLocalStrategies.build());
+
+    for (Map.Entry<String, List<String>> entry : options.dynamicLocalStrategy) {
+      localAndWorkerStrategies.put(entry);
+      throwIfContainsDynamic(entry.getValue(), "--dynamic_local_strategy");
+    }
+    return localAndWorkerStrategies.buildKeepingLast();
   }
 
   private ImmutableMap<String, List<String>> getRemoteStrategies(DynamicExecutionOptions options)
@@ -97,8 +133,13 @@ public class DynamicExecutionModule extends BlazeModule {
       strategies.put(e.getKey(), e.getValue());
     }
     return options.dynamicRemoteStrategy.isEmpty()
-        ? ImmutableMap.of("", ImmutableList.of("remote"))
+        ? ImmutableMap.of("", ImmutableList.of(remoteStrategyName()))
         : ImmutableMap.copyOf(strategies);
+  }
+
+  @ForOverride
+  protected String remoteStrategyName() {
+    return "remote";
   }
 
   @Override
@@ -137,7 +178,8 @@ public class DynamicExecutionModule extends BlazeModule {
             jobs,
             this::canIgnoreFailure);
     registryBuilder.registerStrategy(strategy, "dynamic", "dynamic_worker");
-    registryBuilder.addDynamicLocalStrategies(getLocalStrategies(options));
+    boolean sandboxingSupported = registryBuilder.isStrategyRegistered("sandboxed");
+    registryBuilder.addDynamicLocalStrategies(getLocalStrategies(options, sandboxingSupported));
     registryBuilder.addDynamicRemoteStrategies(getRemoteStrategies(options));
   }
 
@@ -208,6 +250,23 @@ public class DynamicExecutionModule extends BlazeModule {
       String errorMessage,
       FileOutErr outErr,
       boolean isLocal) {
+    // By convention, when killed by a signal, a process gives exit code (128 + signal number).
+    // More accurate information could be had through {@code waitid(2)}, but Java does not expose
+    // that. But accuracy is not critical here, at worst we are a bit slower in getting either
+    // a success or a failure.
+    int signal = exitCode - 128;
+    if (isLocal && ignoreLocalSignals.contains(signal)) {
+      if (verboseFailures) {
+        reporter.handle(
+            Event.info(
+                String.format(
+                    "Local execution for %s stopped by signal %d, ignoring in favor of remote"
+                        + " execution.",
+                    spawn.getResourceOwner().prettyPrint(), signal)));
+      }
+      logger.atInfo().log("Ignoring dynamic local branch killed by signal %d", signal);
+      return true;
+    }
     return false;
   }
 
